# FrontEngine

./: .gitignore  .readthedocs.yaml  LEARN.md  README.md  bing_cookies.json  dev.toml  dev_requirements.txt  pyproject.toml  requirements.txt  stable.toml
.github/workflows/: front_engine_dev_python3_10.yml  front_engine_dev_python3_11.yml  front_engine_dev_python3_12.yml  front_engine_dev_python3_8.yml  front_engine_dev_python3_9.yml  front_engine_stable_python3_10.yml  front_engine_stable_python3_11.yml  front_engine_stable_python3_12.yml  front_engine_stable_python3_8.yml  front_engine_stable_python3_9.yml
.gituhb/workflows/: front_engine_stable_python3_10.yml  front_engine_stable_python3_8.yml  front_engine_stable_python3_9.yml
background_assistant/: ui.py
background_assistant/ui/: main_widget.py
docs/: .readthedocs.yaml  conf.py
docs/docs/Eng/: ui.rst
docs/source/: conf.py  index.rst
docs/source/Zh/: ui.rst
exe/: auto_py_to_exe_setting.json  bing_cookies.json  installer_build.ifp  start_front_engine.py
frontengine/: __init__.py
frontengine/show/: base_widget.py
frontengine/show/audio_visualizer/: audio_visualizer.py
frontengine/show/chat/: chat_scene.py  chat_toast.py
frontengine/show/clicker/: clicker_scene.py  clicker_ui.py
frontengine/show/gif/: paint_gif.py
frontengine/show/image/: paint_image.py
frontengine/show/image_generation/: image_generation_show.py
frontengine/show/load/: load_someone_make_ui.py
frontengine/show/particle/: paint_particle.py  particle_model.py  particle_scene.py  particle_ui.py  particle_utils.py
frontengine/show/scene/: extend_graphic_scene.py  extend_graphic_view.py  scene.py
frontengine/show/sound/: sound_effect.py
frontengine/show/sound_player/: sound_effect.py  sound_player.py
frontengine/show/text/: draw_text.py
frontengine/show/video/: mediaplayer.py  video_player.py
frontengine/show/web/: webview.py
frontengine/system_tray/: extend_system_tray.py
frontengine/ui/: main_ui.py  main_widget.py
frontengine/ui/chat/: chat_model.py  chat_scene_input.py  chatthread.py  speech_to_text.py
frontengine/ui/color/: global_color.py
frontengine/ui/dialog/: choose_file_dialog.py  save_file_dialog.py
frontengine/ui/input/: chat_scene_input.py
frontengine/ui/main/: language_menu.py  main_ui.py
frontengine/ui/menu/: help_menu.py  how_to_menu.py  language_menu.py
frontengine/ui/page/: utils.py
frontengine/user_setting/: scene_setting.py  user_setting_file.py
frontengine/user_setting/gif/: gif_setting.py
frontengine/user_setting/image/: image_setting.py
frontengine/user_setting/sound/: sound_setting.py
frontengine/user_setting/text/: text_setting.py
frontengine/user_setting/video/: video_setting.py
frontengine/user_setting/web/: web_setting.py
frontengine/utils/browser/: browser.py
frontengine/utils/critical_exit/: check_key_is_press.py  critical_exit.py  win32_vk.py
frontengine/utils/exception/: exception_tags.py  exceptions.py
frontengine/utils/json/: json_file.py
frontengine/utils/json_format/: json_process.py
frontengine/utils/logging/: loggin_instance.py
frontengine/utils/multi_language/: english.py  france.py  germany.py  italy.py  language_wrapper.py  russian.py  simplified_chinese.py  traditional_chinese.py
frontengine/utils/redirect_manager/: redirect_manager_class.py
frontengine/worker/: qthread_worker.py
tests/unit_test/start/: extend_front_engine.py  start_front_engine.py
(+79 files in other folders)
