# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frontengine"
version = "0.0.76"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
dependencies = [
    "PySide6==6.8.1.1", "qt-material"
]
description = "FrontEngine is use-define frontview or only use like screen saver"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/FrontEngine"
Code = "https://github.com/Intergration-Automation-Testing/FrontEngine"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = { namespaces = false }
