# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frontengine_dev"
version = "1.0.0"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
dependencies = [
    "PySide6==6.10.2", "qt-material", "PyOpenGL", "PyOpenGL_accelerate", "numpy"
]
description = "FrontEngine is use-define frontview or only use like screen saver"
requires-python = ">=3.10"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/FrontEngine"
Code = "https://github.com/Intergration-Automation-Testing/FrontEngine"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools.packages]
find = { namespaces = false }
